<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fahadhassan.calculatorplus.MainActivity">

    <EditText
        android:id="@+id/calc_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="right|center"
        android:textSize="70sp"
        android:paddingRight="10dp"
        android:cursorVisible="false"
        android:inputType="number"
        android:maxLength="9"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:id="@+id/operation_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/action_clear"
            style="@style/ActionButtons"
            android:layout_below="@+id/calc_text"
            android:text="@string/clear"
            />
        <TextView
            android:id="@+id/action_change_sign"
            style="@style/ActionButtons"
            android:text="@string/change_sign"
            />
        <TextView
            android:id="@+id/action_percent"
            style="@style/ActionButtons"
            android:text="@string/percent"
            />
        <TextView
            android:id="@+id/divide"
            style="@style/OperationButtons"
            android:text="@string/divide"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/number_buttons_row_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/one"
            style="@style/NumberButtons"
            android:layout_below="@+id/calc_text"
            android:text="1"
            />
        <TextView
            android:id="@+id/two"
            style="@style/NumberButtons"
            android:text="2"
            />
        <TextView
            android:id="@+id/three"
            style="@style/NumberButtons"
            android:text="3"
            />
        <TextView
            android:id="@+id/multiply"
            style="@style/OperationButtons"
            android:text="@string/multiply"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/number_buttons_row_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/four"
            style="@style/NumberButtons"
            android:layout_below="@+id/calc_text"
            android:text="4"
            />
        <TextView
            android:id="@+id/five"
            style="@style/NumberButtons"
            android:text="5"
            />
        <TextView
            android:id="@+id/six"
            style="@style/NumberButtons"
            android:text="6"
            />
        <TextView
            android:id="@+id/subtract"
            style="@style/OperationButtons"
            android:text="@string/subtract"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/number_buttons_row_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/seven"
            style="@style/NumberButtons"
            android:layout_below="@+id/calc_text"
            android:text="7"
            />
        <TextView
            android:id="@+id/eight"
            style="@style/NumberButtons"
            android:text="8"
            />
        <TextView
            android:id="@+id/nine"
            style="@style/NumberButtons"
            android:text="9"
            />
        <TextView
            android:id="@+id/add"
            style="@style/OperationButtons"
            android:text="@string/add"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/number_buttons_row_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/zero"
            android:layout_weight="2"
            style="@style/NumberButtons"
            android:text="0"
            />
        <TextView
            android:id="@+id/decimal"
            style="@style/NumberButtons"
            android:layout_below="@+id/calc_text"
            android:text="."
            />

        <TextView
            android:id="@+id/equals"
            style="@style/OperationButtons"
            android:text="="
            />
    </LinearLayout>


</LinearLayout>
